--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: php
     plan: free
     buildCommand: ""
-    startCommand: ""
+    startCommand: php -S 0.0.0.0:10000 -t .
     envVars:
       PHP_VERSION: 8.2
